force-app/main/default/objects/System_Health_Log__c/System_Health_Log__c.object-meta.xml
<CustomObject>
    <label>System Health Log</label>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>System Health Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Health Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>