force-app/main/default/objects/System_Health_Log__c/fields/SOQL_Queries_Count__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Count__c</fullName>
    <label>SOQL Queries Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>